@@ -12,6 +12,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -101,7 +102,7 @@ public class ExperimentConfig {
         other.setOutputPath(this.outputPath);
         other.setSkipClone(this.skipClone);
         if (this.sources != null) {
-            other.setSources(this.sources.stream().map(MetricSource::cloneSelfExact).toList());
+            other.setSources(this.sources.stream().map(MetricSource::cloneSelfExact).collect(Collectors.toList()));
         }
 
         other.setSourcePackage(this.sourcePackage);
@@ -131,7 +132,7 @@ public class ExperimentConfig {
         other.setBuildEnvTag(this.buildEnvTag);
         other.setSkipClone(this.skipClone);
         if (this.sources != null) {
-            other.setSources(this.sources.stream().map(MetricSource::cloneSelfExact).toList());
+            other.setSources(this.sources.stream().map(MetricSource::cloneSelfExact).collect(Collectors.toList()));
         }
 
         other.setSourcePackage(this.sourcePackage);
